# das-to-store

./: .gitignore  LICENSE  README.md  demo.ipynb  environment.yml  pyproject.toml
scripts/: kerchunk_das-onyx.py  kerchunk_das-onyx.sh
src/das_to_store/interrogators/: sintela.py
src/das_to_store/kerchunk/: checks.py  combine.py  generate.py  refs.py
