[project]
name = "das-to-store"
version = "2026.05.0"
description = "Tools for transforming distributed acoustic sensing (DAS) interrogator outputs into cloud-native, analysis-ready virtual datasets and stores."
authors = [
    {name = "Jake Davis", email = "jacob.davis@whoi.edu"}
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.13"
dependencies = []  # handled by environment.yaml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/das_to_store"]